--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:layout_width="@dimen/_160sdp"
             android:layout_height="@dimen/_160sdp"
-            android:src="@drawable/app_logo"
+            android:src="@mipmap/ic_launcher_round"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
