--- a/app/src/main/res/layout/activity_vision_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_live_preview.xml
@@ -18,17 +18,10 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintLeft_toLeftOf="@id/preview_view"
+      android:visibility="gone"
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view"
       app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
-
-  <include
-      android:id="@+id/settings_button"
-      layout="@layout/settings_style"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:layout_constraintRight_toRightOf="@id/preview_view"
-      app:layout_constraintTop_toTopOf="@id/preview_view" />
 
   <LinearLayout
       android:id="@id/control"
@@ -36,24 +29,16 @@
       android:layout_height="60dp"
       app:layout_constraintBottom_toBottomOf="parent"
       android:background="#000"
+      android:gravity="center"
       android:orientation="horizontal">
 
-    <ToggleButton
-        android:id="@+id/facing_switch"
+    <ImageView
+        android:id="@+id/takePictureIcon"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_gravity="center_vertical"
-        android:background="@layout/toggle_style"
-        android:checked="false"
-        android:textOff=""
-        android:textOn=""/>
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_camera_enhance_24"
+        android:clickable="true"/>
 
   </LinearLayout>
 
