--- a/app/src/main/res/layout/activity_vision_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_live_preview.xml
@@ -18,7 +18,7 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintLeft_toLeftOf="@id/preview_view"
-      android:visibility="gone"
+      android:visibility="invisible"
       app:layout_constraintRight_toRightOf="@id/preview_view"
       app:layout_constraintTop_toTopOf="@id/preview_view"
       app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
